--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ node_js:
 install:
   - yarn install
 script:
-  - yarn docs:build
+  - yarn build
 deploy:
   provider: pages
   skip_cleanup: true
   local_dir: docs/.vuepress/dist
-  github_token: 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
+  github_token: GITHUB_PAGES
   keep_history: true
   on:
     branch: master
