--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/busyzz-1994/busyzz-1994.github.io#readme",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.2",
+    "@vuepress/plugin-google-analytics": "^1.8.2",
+    "url-loader": "^4.1.1",
     "vuepress": "^1.8.2"
   }
 }
